<resources>
    <string name="app_name">ILoveMarshmallow</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search a product or a brand</string>
    <string name="search_btn_text">Search</string>
    <string name="placeholder">Placeholder</string>
    <string name="original_price">Original price : $</string>
    <string name="your_deal">Your deal : $</string>
    <string name="share_string">Check this amazing product at Zappos:</string>
    <string name="send_to">Send via</string>
    <string name="not_valid_query">Sorry! No match found.</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="product_color">Color :</string>
</resources>
