<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.internship.zappos.ilovemarshmallow.fragments.ProductViewFragment">
    <ImageView
        android:id="@+id/exp_image"
        android:layout_width="wrap_content"
        android:layout_weight="3"
        android:minHeight="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/img_sample"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="7"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/exp_title"
            android:layout_width="wrap_content"
            android:text="@string/placeholder"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/product_color"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_color"
            android:layout_margin="4dp"/>
        <TextView
            android:layout_margin="4dp"
            android:id="@+id/exp_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"/>
        <LinearLayout
            android:id="@+id/orig_price_layout"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_price"/>
            <TextView
                android:id="@+id/exp_orig_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/your_deal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="17dp"
                android:text="@string/your_deal"/>
            <TextView
                android:id="@+id/exp_price"
                android:textSize="17dp"
                android:textColor="@android:color/holo_red_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/add_to_cart"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/add_to_cart"
        android:textColor="#eeeeee"
        android:layout_margin="10dp"
        android:background="@android:color/holo_blue_dark"
        />
</LinearLayout>
</ScrollView>